[package]
name = "leina-chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
egui-wgpu = "0.23"
egui-winit = { version = "0.23", default-features = false, features = ["links"] }
egui_memory_editor = "0.2.6"
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
pixels = { git = "https://github.com/parasyte/pixels.git" }
rand = "0.8.5"
winit = "0.28"
winit_input_helper = "0.14"
